--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -253,3 +253,152 @@ footer {
     color:#444;
   }
 }
+.right-corner-nav {
+top: 0;
+left: 0;
+font-family: "Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB",sans-serif;
+font-size: 14px;
+font-weight: normal;
+line-height: 26px;
+z-index: 1070;
+position: fixed;
+}
+.right-corner-nav>a {
+padding: 4px 15px;
+-webkit-transition: all 0.35s linear;
+-moz-transition: all 0.35s linear;
+-o-transition: all 0.35s linear;
+transition: all 0.35s linear;
+color: #39c;
+background-color: #fff;
+border-top: 0;
+border-bottom: 1px solid #d9d9d9;
+float: left;
+}
+.right-corner-nav>a:hover {
+color: #fff;
+background-color: #39c;
+}
+.show-contents {
+border: 1px solid #d9d9d9;
+position: fixed;
+top: 50%;
+margin-top: -50px;
+left: -30px;
+color: #39c;
+/*background-color: #39c;*/
+width: 40px;
+text-align: right;
+padding: 20px 5px;
+-webkit-transition: all 0.35s linear;
+-moz-transition: all 0.35s linear;
+-o-transition: all 0.35s linear;
+transition: all 0.35s linear;
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
+z-index: 1060;
+}
+.show-contents:hover {
+color: #fff;
+background-color: #39c;
+left: -20px;
+}
+.contents{
+width: 300px;
+text-align:center;
+position: fixed;
+top: 60px;
+left: -510px;
+bottom: 0;
+margin-left: 0;
+padding: 0;
+padding-bottom: 40px;
+overflow-y: auto;
+border: 1px solid #d9d9d9;
+background-color: #fff;
+-webkit-border-radius: 10px;
+-moz-border-radius: 10px;
+border-radius: 10px;
+-webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+-moz-box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+box-shadow: 0 1px 6px rgba(0,0,0,0.25);
+-webkit-transition: left 0.5s ease;
+-moz-transition: left 0.5s ease;
+-o-transition: left 0.5s ease;
+transition: left 0.5s ease;
+z-index: 1060; 
+}
+.posts{
+width:700px;
+margin-right: auto;
+margin-left: auto;
+}
+@media (max-width: 767px){
+.posts{
+width: auto;
+}
+.article{margin-top:60px}
+}
+ul.unstyled {
+padding: 0;
+margin-left: 0;
+list-style: none;
+text-align: left;
+}
+.contents-active {
+left: -10px;
+}
+.contents li {
+font-family: Georgia,"Times New Roman",Times,"Songti SC","SimSun",serif;
+position: relative;
+border-bottom: 1px dotted #d9d9d9;
+}
+.contents li:hover {
+border-bottom: 1px dotted #a6a6a6;
+background-color: #eee;
+-webkit-transition: all 0.35s linear;
+-moz-transition: all 0.35s linear;
+-o-transition: all 0.35s linear;
+transition: all 0.35s linear;
+}
+.contents li.active {
+background-color: #39c;
+/*e58c7c*/
+}
+.contents li a {
+padding: 10px 10px 8px 30px;
+display: block;
+}
+.contents li.active a {
+color: #fff;
+}
+.contents a {
+color: #555;
+text-decoration: none;
+}
+.contents h1{
+font-family: inherit;
+font-weight: bold;
+line-height: 20px;
+color: inherit;
+text-rendering: optimizelegibility;
+margin: 20px 20px 20px 30px;
+}
+.close {
+padding: 10px 15px;
+font-size: 13px;
+float: none;
+text-align: right;
+color: #000;
+text-shadow: 0 1px 0 #fff;
+opacity: 0.2;
+filter: alpha(opacity=20);
+}
+.close:hover, .close:focus {
+color: #000;
+text-decoration: none;
+cursor: pointer;
+opacity: 0.4;
+filter: alpha(opacity=40);
+}
