--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -284,6 +284,9 @@ article{
 	font-weight: 100;
 	line-height: 25px;
 	color: #2f2f2f;
+	margin-bottom: 50px;
+	padding-top:60px;
+	border-bottom: 1px solid #d9d9d9;
 	
 }
 article h1{
