--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -279,7 +279,7 @@ footer {
   }
 }
 article{
-	font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', "Hiragino Sans GB", "STXihei", "Î¢ÈíÑÅºÚ", serif;
+	font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', "Hiragino Sans GB", "STXihei","å¾®è½¯é›…é»‘",serif;
 	font-size: 16px;
 	font-weight: 100;
 	line-height: 25px;
