--- a/template/sigle-index.html
+++ b/template/sigle-index.html
@@ -6,24 +6,37 @@
 <meta name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=no">
 <link rel="stylesheet" href="../stylesheets/styles.css">
-<link rel="stylesheet" href="../stylesheets/font-awesome.min.css">
-<link rel="stylesheet" href="../stylesheets/pygment_trac.css">
+<link rel="stylesheet" href="../stylesheets/page.css">
 <title>Spring MVC 3 入门示例</title>
 </head>
-<body>
-<ARTICLE>
-<h1 id="spring-mvc-3">Spring MVC 3 入门示例</h1>
+<body><article><h1 id="spring-mvc-3">Spring MVC 3 入门示例</h1>
 <blockquote>
-<p>目标：输入一个url地址，显示页面，页面内容从后台获取。<br />
-<img alt="" src="file://C:\Users\SayiLife\Documents\GitHub\sayi.github.com\article\spring/result.png" /> </p>
+<p>要做什么：输入一个url地址，显示页面，页面内容从后台获取。  </p>
 </blockquote>
 <ol>
 <li>
 <p>准备：目录结构，依赖架包<br />
-首先创建基本的动态web工程的目录，如同下面的结构：<br />
-<img alt="" src="file://C:\Users\SayiLife\Documents\GitHub\sayi.github.com\article\spring/web-dir.png" /><br />
-在下载的spring-framword版本的dist目录下，有发布的各种用途的jar包，需要什么架包就使用什么架包。在这个入门级的程序中，我们没有使用到数据库，所以不需要org.springframework.jdbc.RELEASE.jar架包，由于依赖于common-log，所以需要commons-logging.jar。本示例所需架包如下图：<br />
-<img alt="" src="file://C:\Users\SayiLife\Documents\GitHub\sayi.github.com\article\spring/lib.png" /></p>
+首先创建基本的动态web工程的目录，如同下面的结构：  </p>
+<pre><code>---- spring3-mvc-example\  
+            | -- src\  
+            | -- webapps\  
+                    | -- META-INF\  
+                    | -- WEB-INF\  
+                            | -- lib\  
+                            | -- web.xml
+</code></pre>
+<p>在下载的spring-framword版本的dist目录下，有发布的各种用途的jar包，需要什么架包就使用什么架包。在这个入门级的程序中，我们没有使用到数据库，所以不需要org.springframework.jdbc.RELEASE.jar架包，由于依赖于common-log，所以需要commons-logging.jar。本示例所需架包如下图：   </p>
+<pre><code>------lib\
+       | -- commons-logging-1.1.1.jar
+       | -- jstl-1.1.2.jar
+       | -- org.springframework.asm-3.1.3.RELEASE.jar
+       | -- org.springframework.beans-3.1.3.RELEASE.jar
+       | -- org.springframework.context-3.1.3.RELEASE.jar
+       | -- org.springframework.core-3.1.3.RELEASE.jar
+       | -- org.springframework.expression-3.1.3.RELEASE.jar
+       | -- org.springframework.web-3.1.3.RELEASE.jar
+       | -- org.springframework.web.servlet-3.1.3.RELEASE.jar
+</code></pre>
 </li>
 <li>
 <p>web.xml配置：DispatcherServlet<br />
@@ -113,7 +126,8 @@ public class HelloController {
 <p>测试结果<br />
 至此，完整的目录结构如下：<br />
 <img alt="" src="file://C:\Users\SayiLife\Documents\GitHub\sayi.github.com\article\spring/end-result.png" /><br />
-访问：http://localhost:port/spring3-mvc-example/show  </p>
+访问：http://localhost:port/spring3-mvc-example/show<br />
+<img alt="" src="file://C:\Users\SayiLife\Documents\GitHub\sayi.github.com\article\spring/result.png" /></p>
 </li>
 </ol>
 </ARTICLE>
