--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -23,6 +23,9 @@ text-shadow: 0px 2px 3px #555;
 pre {
     text-shadow: none;
 }
+h1, h2, h3, h4{
+    color: #222;
+}
 
 blockquote:before,  blockquote:after{
 content: "";
