--- a/template/sigle-index.html
+++ b/template/sigle-index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport"
     content="width=device-width, initial-scale=1, user-scalable=no">
-<link rel="stylesheet" href="../../stylesheets/styles.css">
-<link rel="stylesheet" href="../../stylesheets/page.css">
+<link rel="stylesheet" href="../stylesheets/styles.css">
+<link rel="stylesheet" href="../stylesheets/page.css">
 <title>Spring MVC 3 入门示例</title>
 </head>
 <body><article><h1>
