--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -21,6 +21,7 @@ article{
 text-shadow: 0px 2px 3px #555;
 }
 pre {
+    background-color:rgba(248, 248, 248, 0.66);
     text-shadow: none;
 }
 h1, h2, h3, h4{
