--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,7 @@
 /*@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);*/
 
 body {
-  padding:50px;
+  padding:30px;
   font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#777;
   font-weight:300;
@@ -51,7 +51,7 @@ a small {
 }
 
 .wrapper {
-  width:860px;
+  width:960px;
   margin:0 auto;
 }
 
@@ -487,12 +487,132 @@ display: inline-block;
 .choice-nav li.selected {
 background-color: #39c;
 }
-.python{
-  background-color: #2b5b84;
-}
-.python h3{
-  color:#39c;
-}
 /* section>ul>li:nth-child(odd):not(.python){
   background-color: #ddd;
 } */
+.category{
+font-family: 'Comic Sans MS';
+padding-left: 2em;
+margin-bottom: 2em;
+}
+.category-title{
+font-size: 18px;
+/*background-color: #404040;*/
+background-color: #57ad68;
+color: #ffffff;
+padding: 5px 10px 5px 10px;
+border-radius: 2px;
+}
+.category-links{
+  padding-top: 10px;
+}
+.python{
+  background-color: #376A94;
+}
+.fix-right-top{
+  position: fixed;
+  right: 4px;
+  top:0;
+  border-bottom: 1px solid #d9d9d9;
+  padding: 4px;
+  -webkit-transition: all 0.35s linear;
+-moz-transition: all 0.35s linear;
+-o-transition: all 0.35s linear;
+transition: all 0.35s linear;
+}
+.fix-right-top:hover{
+  
+}
+.img-circle {
+  -webkit-border-radius: 500px;
+-moz-border-radius: 500px;
+border-radius: 500px;
+padding: 4px;
+background-color: #fff;
+border: 1px solid #ccc;
+border: 1px solid rgba(0, 0, 0, 0.2);
+-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+.author{
+position: relative;
+padding: 0 0 60px 0;
+font-weight: 700;
+}
+.author-card{
+position: absolute;
+left: 2em;
+}
+.author-info{
+  word-wrap: break-word;
+margin-left: 180px;
+padding-top: 10px;
+}
+.author-info div{
+  margin:4px 0;
+}
+.btn{
+  display: inline-block;
+position: relative;
+height: 40px;
+padding: 0 20px;
+border: 0;
+color: #666665;
+background-color: #dededc;
+font-size: 14px;
+line-height: 39px;
+text-align: center;
+text-decoration: none;
+font-style: normal;
+cursor: pointer;
+border-bottom: 1px solid rgba(0,0,0,0.1);
+vertical-align: bottom;
+text-rendering: optimizeLegibility;
+-webkit-font-smoothing: antialiased;
+-webkit-touch-callout: none;
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-ms-user-select: none;
+user-select: none;
+font-family: "freight-sans-pro","Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
+font-weight: 400;
+-webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+-webkit-border-radius: 3px;
+-moz-border-radius: 3px;
+border-radius: 3px;
+-webkit-transition: all .1s ease;
+-moz-transition: all .1s ease;
+-ms-transition: all .1s ease;
+-o-transition: all .1s ease;
+transition: all .1s ease;
+  background-image: -webkit-gradient(linear,0 0,0 100%,from(rgba(0,0,0,0.05)),to(rgba(0,0,0,0.05)));
+background-image: -moz-linear-gradient(top,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-image: -webkit-linear-gradient(top,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-image: -o-linear-gradient(top,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-image: linear-gradient(to bottom,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-repeat: repeat-x;
+border-bottom: 1px solid rgba(0,0,0,0.2);
+}
+.btn-follow{
+  background-color: rgba(87,173,104,0.9);
+color: #fff;
+float: left;
+margin-right: 0;
+padding: 0 35px;
+}
+.btn-follow:hover {
+background-color: #57ad68;
+}
+.btn:hover {
+background-image: -webkit-gradient(linear,0 0,0 100%,from(rgba(0,0,0,0.05)),to(rgba(0,0,0,0.05)));
+background-image: -moz-linear-gradient(top,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-image: -webkit-linear-gradient(top,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-image: -o-linear-gradient(top,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-image: linear-gradient(to bottom,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
+background-repeat: repeat-x;
+border-bottom: 1px solid rgba(0,0,0,0.2);
+}
