--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -615,3 +615,8 @@ background-image: linear-gradient(to bottom,rgba(0,0,0,0.05),rgba(0,0,0,0.05));
 background-repeat: repeat-x;
 border-bottom: 1px solid rgba(0,0,0,0.2);
 }
+.bg{
+  color: #222;
+text-shadow: 0px 2px 3px #555;
+background: #474747 url(../images/bgpage.png);
+}
