--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -4,9 +4,7 @@ font-size: 16px;
 font-weight: 100;
 line-height: 25px;
 color: #fff;
-background: #474747 url(../images/bgpage.png);
 }
-
 img{
 padding: 4px;
 /*background-color: rgb(28, 168, 157);*/
@@ -15,10 +13,6 @@ border: 1px solid rgba(0, 0, 0, 0.2);
 -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-}
-article{
-    color: #222;
-text-shadow: 0px 2px 3px #555;
 }
 pre {
     background-color:rgba(248, 248, 248, 0.9);
@@ -31,7 +25,7 @@ h1, h2, h3, h4{
 blockquote:before,  blockquote:after{
 content: "";
 font-size: 100px;
-color: #fff;
+color: #57ad68;
 font-family: Helvetica, arial, '宋体';
 position: absolute;
 }
@@ -61,4 +55,16 @@ background-color: #2C9E7A;
 .bookmark{
 border-left: 4px solid #39c;
 padding-left: 40px !important;
+}
+.bg{color: #222;
+text-shadow: 0px 2px 3px #555;
+background: #474747 url(../images/bgpage.png);
+}
+.bg blockquote:before,.bg blockquote:after{
+    color: #fff;
+}
+.switch-bg{
+    color:#39c;
+    cursor: pointer;
+    text-shadow:none;
 }
