--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -14,7 +14,7 @@ border: 1px solid rgba(0, 0, 0, 0.2);
 -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
-pre {
+code{
     background-color:rgba(248, 248, 248, 0.9);
     text-shadow: none;
 }
