--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -279,7 +279,7 @@ article{
 	font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', "Hiragino Sans GB", "STXihei","微软雅黑",serif;
 	font-size: 16px;
 	font-weight: 100;
-	line-height: 25px;
+	line-height: 28px;
 	color: #2f2f2f;
 	margin-bottom: 50px;
 	padding-top:60px;
@@ -617,6 +617,6 @@ border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 .bg{
 color: #222;
-text-shadow: 0px 2px 3px #555;
+/* text-shadow: 0px 2px 3px #555; */
 background: #474747 url(../images/bgpage.png);
 }
