--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -104,8 +104,8 @@ body.english article{
     text-shadow:none;
 }
 
-/* @media (max-width: 900px) {
+@media (max-width: 900px) {
   article {
-   width:100%;
+   width:inherit;
   }
-} */
+}
