--- a/template/sigle-page.html
+++ b/template/sigle-page.html
@@ -12,7 +12,7 @@
 <script src="../../javascripts/google-code-prettify/prettify.js"></script>
 <title>Ant 使用</title>
 </head>
-<body onload="prettyPrint()">
+<body onload="prettyPrint()" class="bg">
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
 <article>
 
