spring file upload

--- a/template/sigle-page.html
+++ b/template/sigle-page.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="../../stylesheets/page.css">
 <link href="../../javascripts/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
 <script src="../../javascripts/google-code-prettify/prettify.js"></script>
-<title>Ant 使用</title>
+<title>title</title>
 </head>
 <body onload="prettyPrint()" class="bg">
 <div class="fix-right-top switch-bg"><i class="icon-adjust"></i></div>
@@ -18,7 +18,7 @@
 
 
 
-</ARTICLE>
+</article>
 <script src="../../javascripts/jquery-1.8.0.min.js"></script>
 <script type="text/javascript">
     $(function(){
