--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -4,6 +4,7 @@ font-size: 16px;
 font-weight: 100;
 line-height: 25px;
 color: #fff;
+margin:0px;
 }
 img{
 padding: 4px;
@@ -70,7 +71,7 @@ padding-left: 40px !important;
 article{
         width: 75%;
 margin: 0 auto;
-padding: 28px;
+padding: 16px;
 border: 1px solid #FCF8F8;
 box-shadow: 5px 5px 1px 0 rgba(253, 247, 247, 0.2);
 background-color: #474747;
